# apple_codesign_adhoc

./: Cargo.toml  README.md  lib.rs
